@@ -1,3 +1,9 @@
+2008-02-15  Matthias Clasen  <mclasen@redhat.com>
+
+	* gdk/x11/gdkkeys-x11.c:
+	* gdk/x11/gdkcolor-x11.c:
+	* gdk/gdkpolyreg-generic.c: Fix a small doc issues.
+
 2008-02-15  Matthias Clasen <mclasen@redhat.com>
 
 	* gdk/x11/gdktestutils-x11.c:
